INSTX-4950 split dorado_torch_utils out of dorado_utils so we can use doado_utils without depending on torch, cuda or metal

--- a/dorado/basecall/CMakeLists.txt
+++ b/dorado/basecall/CMakeLists.txt
@@ -55,6 +55,7 @@ target_include_directories(dorado_basecall
 target_link_libraries(dorado_basecall
     PUBLIC
         torch_lib
+        dorado_torch_utils
         dorado_utils
     PRIVATE
         spdlog::spdlog
