--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -47,14 +47,10 @@ add_library(dorado_utils
     stream_utils.h
     sys_stats.cpp
     sys_stats.h
-    tensor_utils.cpp
-    tensor_utils.h
     thread_naming.cpp
     thread_naming.h
     time_utils.cpp
     time_utils.h
-    torch_utils.cpp
-    torch_utils.h
     trim_rapid_adapter.cpp
     trim_rapid_adapter.h
     trim.cpp
@@ -66,15 +62,22 @@ add_library(dorado_utils
     uuid_utils.h
  )
 
+ add_library(dorado_torch_utils
+    tensor_utils.cpp
+    tensor_utils.h
+    torch_utils.cpp
+    torch_utils.h
+ )
+
 if (DORADO_GPU_BUILD)
     if(APPLE)
-        target_sources(dorado_utils
+        target_sources(dorado_torch_utils
             PRIVATE
             metal_utils.cpp
             metal_utils.h
         )
     else()
-        target_sources(dorado_utils
+        target_sources(dorado_torch_utils
             PRIVATE
             cuda_utils.cpp
             cuda_utils.h
@@ -82,11 +85,11 @@ if (DORADO_GPU_BUILD)
     endif()
 endif()
 
-target_compile_definitions(dorado_utils
+target_compile_definitions(dorado_torch_utils
     PUBLIC
         DORADO_GPU_BUILD=$<BOOL:${DORADO_GPU_BUILD}>
         DORADO_CUDA_BUILD=$<AND:$<BOOL:${DORADO_GPU_BUILD}>,$<NOT:$<BOOL:${APPLE}>>>
-        DORADO_METAL_BUILD=$<AND:$<BOOL:${DORADO_GPU_BUILD}>,$<BOOL:${APPLE}>>        
+        DORADO_METAL_BUILD=$<AND:$<BOOL:${DORADO_GPU_BUILD}>,$<BOOL:${APPLE}>>
 )
 
 target_include_directories(dorado_utils
@@ -94,8 +97,20 @@ target_include_directories(dorado_utils
     ${CMAKE_CURRENT_SOURCE_DIR}/..
 )
 
+target_include_directories(dorado_torch_utils
+    INTERFACE
+    ${CMAKE_CURRENT_SOURCE_DIR}/..
+)
+
 # 3rdparty libs should be considered SYSTEM headers
 target_include_directories(dorado_utils
+    SYSTEM
+    PUBLIC
+    ${DORADO_3RD_PARTY_SOURCE}/toml11
+)
+
+# 3rdparty libs should be considered SYSTEM headers
+target_include_directories(dorado_torch_utils
     SYSTEM
     PUBLIC
     ${DORADO_3RD_PARTY_SOURCE}/NVTX/c/include
@@ -115,15 +130,30 @@ target_link_libraries(dorado_utils
         htslib
 )
 
+target_link_libraries(dorado_torch_utils
+    PUBLIC
+        ${TORCH_LIBRARIES}
+        date::date
+        edlib
+        spdlog::spdlog
+    PRIVATE
+        dorado_compat
+        minimap2
+        htslib
+)
+
 if (DORADO_ENABLE_PCH)
     add_subdirectory(pch)
     target_link_libraries(dorado_utils PUBLIC dorado_pch)
     target_precompile_headers(dorado_utils REUSE_FROM dorado_pch)
+
+    target_link_libraries(dorado_torch_utils PUBLIC dorado_pch)
+    target_precompile_headers(dorado_torch_utils REUSE_FROM dorado_pch)
 endif()
 
 if(APPLE)
     find_library(APPLE_FWK_FOUNDATION Foundation REQUIRED)
-    target_link_libraries(dorado_utils
+    target_link_libraries(dorado_torch_utils
         PUBLIC
             ${APPLE_FWK_FOUNDATION}
     )
@@ -131,8 +161,8 @@ if(APPLE)
         find_library(APPLE_FWK_QUARTZ_CORE QuartzCore REQUIRED)
         find_library(APPLE_FWK_METAL Metal REQUIRED)
         find_library(IOKIT IOKit REQUIRED)
-        add_dependencies(dorado_utils metal-lib)
-        target_link_libraries(dorado_utils
+        add_dependencies(dorado_torch_utils metal-lib)
+        target_link_libraries(dorado_torch_utils
             PUBLIC
                 ${APPLE_FWK_QUARTZ_CORE}
                 ${APPLE_FWK_METAL}
@@ -155,3 +185,4 @@ if (ECM_ENABLE_SANITIZERS AND (CMAKE_CXX_COMPILER_ID MATCHES "GNU") AND (CMAKE_C
 endif()
 
 enable_warnings_as_errors(dorado_utils)
+enable_warnings_as_errors(dorado_torch_utils)
