Path in NVTX for dorado_utils

--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -107,6 +107,7 @@ target_include_directories(dorado_torch_utils
 target_include_directories(dorado_utils
     SYSTEM
     PUBLIC
+    ${DORADO_3RD_PARTY_SOURCE}/NVTX/c/include
     ${DORADO_3RD_PARTY_SOURCE}/toml11
 )
 
