--- a/dorado/utils/pch/CMakeLists.txt
+++ b/dorado/utils/pch/CMakeLists.txt
@@ -10,14 +10,7 @@ target_precompile_headers(dorado_pch
 
 target_link_libraries(dorado_pch
     PUBLIC
-        ${TORCH_LIBRARIES}
-)
-
-# 3rdparty libs should be considered SYSTEM headers
-target_include_directories(dorado_pch
-    SYSTEM
-    PUBLIC
-        ${TORCH_INCLUDE_DIRS}
+        torch_lib
 )
 
 enable_warnings_as_errors(dorado_pch)
