[DOR-777] Run the ScaledDotProductAttention test on all platforms
Was useful to diagnose what the MPS backend in torch was doing to upset
the metal debug layer.

Note that the random seed had to be changed since we were getting NaNs
when using MPS.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -51,6 +51,7 @@ add_executable(dorado_tests
     RNASplitTest.cpp
     SampleSheetTests.cpp
     SamUtilsTest.cpp
+    ScaledDotProductAttention.cpp
     SequenceUtilsTest.cpp
     StereoDuplexTest.cpp
     StitchTest.cpp
@@ -79,11 +80,7 @@ if (DORADO_GPU_BUILD)
         target_sources(dorado_tests PRIVATE MetalLinearTest.cpp)
     else()
         target_sources(dorado_tests PRIVATE cuda_utils_test.cpp)
-        if (NOT DORADO_TX2)
-            target_sources(dorado_tests PRIVATE ScaledDotProductAttention.cpp)
-        endif()
     endif()
-
 endif()
 
 
