[DOR-777] Increase timeout of macOS model download job
Each model has to recalculate its batch size, so it takes a while to go
through all of them.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -687,6 +687,7 @@ test:model_download:macos:arm:
     - build:macos:arm
   script:
     - ./tests/test_model_download.py --exe ./dist/bin/dorado --data ./tests/data
+  timeout: 1h 30m
 
 # MLHub
 
