INSX-4950 Moved dorado_torch_utils into it's own folder.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,6 +130,7 @@ enable_testing()
 
 add_subdirectory(dorado/compat)
 add_subdirectory(dorado/utils)
+add_subdirectory(dorado/torch_utils)
 add_subdirectory(dorado/models)
 add_subdirectory(dorado/model_downloader)
 add_subdirectory(dorado/basecall)
