- Moved dorado_pch into the torch_utils folder and stopped dorado_utils from depending on it. - Other small review changes and build fixes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -323,7 +323,7 @@ if(NOT SKIP_HDF_PLUGINS)
 endif()
 
 if (DORADO_ENABLE_PCH)
-    target_precompile_headers(dorado_lib REUSE_FROM dorado_utils)
+    target_precompile_headers(dorado_lib REUSE_FROM dorado_torch_utils)
 endif()
 
 target_link_libraries(dorado_lib
