--- a/dorado/basecall/CMakeLists.txt
+++ b/dorado/basecall/CMakeLists.txt
@@ -77,5 +77,5 @@ endif()
 enable_warnings_as_errors(dorado_basecall)
 
 if (DORADO_ENABLE_PCH)
-    target_precompile_headers(dorado_basecall REUSE_FROM dorado_utils)
+    target_precompile_headers(dorado_basecall REUSE_FROM dorado_torch_utils)
 endif()
