--- a/dorado/modbase/CMakeLists.txt
+++ b/dorado/modbase/CMakeLists.txt
@@ -37,5 +37,5 @@ target_link_libraries(dorado_modbase
 enable_warnings_as_errors(dorado_modbase)
 
 if (DORADO_ENABLE_PCH)
-    target_precompile_headers(dorado_modbase REUSE_FROM dorado_utils)
+    target_precompile_headers(dorado_modbase REUSE_FROM dorado_torch_utils)
 endif()
