DOR-728 Add a mechanism to cache auto batch size calculations per GPU/model/chunk size so that we don't have to run the slow detection every time dorado runs.  Initial commit including benchmarks from Quadro GV100 on Windows.

--- a/dorado/basecall/CMakeLists.txt
+++ b/dorado/basecall/CMakeLists.txt
@@ -34,12 +34,16 @@ if (DORADO_GPU_BUILD)
     else()
         target_sources(dorado_basecall
             PRIVATE
+            CudaChunkBenchmarks.cpp
+            CudaChunkBenchmarks.h
             CudaModelRunner.cpp
             CudaModelRunner.h
             CudaCaller.cpp
             CudaCaller.h
             decode/CUDADecoder.cpp
             decode/CUDADecoder.h
+            Quadro_GV100.cpp
+            Quadro_GV100.h
         )
     endif()
 endif()
