--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -698,6 +698,25 @@ test:model_download:macos:arm:
     - ./tests/test_model_download.py --exe ./dist/bin/dorado --data ./tests/data
   timeout: 1h 30m
 
+generate_auto_benchmarks:linux:x86:focal:
+  image: ${DORADO_DOCKER_ROOT}/dorado-deps-20.04-cuda-${CUDA}.0:1.1
+  extends:
+    - .linux_dependencies
+    - .linux_runner
+  when: manual
+  stage: test
+  needs:
+    - build:linux:x86:focal
+  script:
+    - nvidia-smi
+    - ./benchmark/generate_chunk_auto_batchsize_benchmarks.sh ./dist/bin/dorado cuda:0
+  artifacts:
+    paths:
+      - "*.cpp"
+      - "*.h"
+      - "*.csv"
+    expire_in: 1 day
+
 # MLHub
 
 .mlhub: &mlhub
