Refactored the CIGAR objects, parsing, serialization and usage in Dorado Correct. Moved the CigarOp and CigarOpType definition, together with the lookup tables and conversion functions, to a new pair of files: cigar.h and cigar.cpp.

--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -9,6 +9,8 @@ add_library(dorado_utils
     barcode_kits.h
     basecaller_utils.cpp
     basecaller_utils.h
+    cigar.cpp
+    cigar.h
     concurrency/async_task_executor.cpp
     concurrency/async_task_executor.h
     concurrency/detail/priority_task_queue.cpp
