--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -533,6 +533,7 @@ build_archive:macos:x64:
     - bash ./tests/test_simple_basecaller_execution.sh ./dist/bin/dorado ${MODEL} ${BATCH}
     - bash ./tests/test_simple_auto_basecaller_execution.sh ./dist/bin/dorado ${MODEL_SPEED} ${MODEL_VERSION} ${BATCH}
     - bash ./tests/test_expected_logging.sh ./dist/bin/dorado ${MODEL} ${BATCH}
+    - bash ./tests/test_dorado_correct.sh ./dist/bin/dorado
 
 .test_dorado_windows:
   stage: test
