--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -524,7 +524,7 @@ build_archive:macos:x64:
     BATCH: 384
     MODEL_SPEED: hac
     MODEL_VERSION: v4.2.0
-    TEST_DORADO_CORRECT: 1
+    NO_TEST_DORADO_CORRECT: 0
   script:
     # Do everything inside a newly created folder, since some runners only run
     # tests and hence never perform a git clean.
@@ -596,7 +596,7 @@ test:linux:arm64:bionic:
     BATCH: 0
     MODEL_SPEED: hac
     MODEL_VERSION: v4.2.0
-    TEST_DORADO_CORRECT: 0
+    NO_TEST_DORADO_CORRECT: 1
   needs:
     - build:linux:arm64:bionic
 
