Added fastq_reader.cpp|h with method is_fastq checks for a fastq file with either Ts or Us

--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -23,6 +23,8 @@ add_library(dorado_utils
     crypto_utils.cpp
     dev_utils.cpp
     dev_utils.h
+    fastq_reader.cpp
+    fastq_reader.h
     fs_utils.cpp
     fs_utils.h
     hts_file.cpp
